# ledger-cfo

./: .env  .env.correct  .gitignore  CreateTestInvoice.ps1  DEPLOYMENT.md  DEPLOYMENT_VERIFICATION.md  Dockerfile  README.md  TEST_REPORT.md  accounting_engine.py  app.py  approval_workflow.py  ask_claude.cjs  build_and_deploy.bat  build_and_deploy.ps1  build_and_deploy.sh  bytecode_analyzer.py  chat_interface_cfo.py  cloudbuild.yaml  config.py  create_invoice.bat  create_invoice.py  create_test_invoice.py  deploy_cloud_run.ps1  diagnose_gcloud.ps1  email_monitor.py  email_parser.py  email_storage.py  env_analyzer.py  extract_token.py  fix_and_start.bat  fix_env_file.py  fix_invoice.py  gmail_auth.py  instant_email_checker.py  invoice_creator.py  invoice_test.py  llm_interface.py  logger.py  main.py  (+32 more)
.github/workflows/: ci.yml  deploy.yml
Services/: Bookkeeper.psm1  CommandParser.psm1  EmailSender.psm1  GmailAuth.psm1  InvoiceManager.psm1  QBOClient.psm1  Reporting.psm1
cfo_agent/: .dockerignore  Dockerfile  core.py  main.py  requirements.txt
cfo_agent/.github/workflows/: deploy.yml
cfo_agent/scripts/: build_and_push.sh  create_scheduler.sh  create_secrets.sh  deploy.sh  enable_gcp_apis.sh  test_endpoints.sh
dev_logs/: cursor_step_output.txt
scripts/: Dockerfile.test  README.md  cloudbuild.yaml  deploy_component.py  final_verify.sh  grant_iam_permissions.ps1  grant_iam_permissions.sh  ledger_pipeline.py  mypy_daemon_manager.py  orchestrate.py  terminal_orchestrator.py  test_app.py  test_build_global.ps1  test_build_global.sh  test_build_tag_only.ps1  test_deploy.ps1  test_deploy.sh  test_invoke.ps1  test_invoke.sh  test_orchestrator.py  verify_region.sh
scripts/logs/: test-failure.json  test-pattern-match.json  test-quick-success.json  test-slow-success.json  test-timeout.json
src/: EmailFunction.ps1
src/ledger_cfo/: README.md  __main__.py  cli.py  cli_README.md  simple_cli.py  simple_cli_README.md
src/ledger_cfo/core/: README.md  config.py  constants.py  crud.py  database.py  logging_config.py
src/ledger_cfo/google_ads_agent/: README.md  __init__.py
src/ledger_cfo/integrations/: gmail_api.py  qbo_api.py
src/ledger_cfo/models/: __init__.py  account_cache.py  conversation_history.py  customer.py  pending_action.py  vendor_cache.py
src/ledger_cfo/processing/: __init__.py  llm_nlu.py  llm_orchestrator.py  nlu.py  tasks.py
tests/: EmailWorkflow.Tests.ps1  test_cli.py  test_core.py  test_gmail_auth.py  test_google_ads_agent.py
tests/integration/: test_scenario_1_live.py  test_secret_manager_init.py
tests/processing/: test_nlu.py
