[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ledger-cfo"
version = "0.1.0"
description = "A CFO agent for managing ledger data, potentially interacting with Google Ads."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Assuming MIT, update if needed
    "Operating System :: OS Independent",
]
dependencies = [
    # Add core dependencies here later, e.g.:
    # "requests",
    "click", # For the CLI test
    "pytest", # For tests
    # "google-ads", # If used by the google_ads_agent
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "flake8",
    # Add other dev dependencies
]

[project.urls]
"Homepage" = "https://github.com/Sku3397/ledger-cfo" # Update if needed
"Bug Tracker" = "https://github.com/Sku3397/ledger-cfo/issues" # Update if needed

[project.scripts]
ledger-cfo = "ledger_cfo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]  # Look for packages in src/ 